--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ body {
   padding-top: 30px;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+}
+
 .fade-in {
   animation-name: fade;
   animation-duration: 0.01s;
@@ -23,7 +28,7 @@ body {
 
 @keyframes dropIn {
   0% {
-    transform: translateY(-800px);
+    transform: translateY(-1200px);
     opacity: 0;
    }
   100% {
@@ -36,28 +41,6 @@ body {
   width: 45%;
 }
 
-#notes {
-  width: 45%;
-  height: 95%;
-  padding: 20px;
-  font-size: 24px;
-  resize: none;
-
+#left > * {
   border-radius: 10px;
-  opacity: 0.7;
-  transition: opacity 0.5s;
-
-  animation-name: dropIn;
-  animation-duration: 0.5s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-out;
-}
-
-#notes:focus {
-  outline: none;
-  opacity: 1;
-}
-
-#weather {
-  background-color: white;
 }
