--- a/css/news.css
+++ b/css/news.css
@@ -3,23 +3,22 @@
   padding: 20px;
   margin-top: 20px;
   color: #333;
-  transition: all 0.3s;
+  opacity: 0.7;
+  transition: 0.3s;
   height: 350px;
 
   animation-name: newsEnter;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  animation-duration: 3s;
+  animation-duration: 2s;
 }
 
 @keyframes newsEnter {
   0% {
     transform: translateY(-1200px);
-    opacity: 0;
    }
   100% {
     transform: translateY(0px);
-    opacity: 0.7;
   }
 }
 
@@ -57,14 +56,10 @@
 .story:hover {
   opacity: 1;
   background-color: #ddd;
+  transform: translate(-3px, -3px);
+  box-shadow: 7px 7px 10px #888;
 }
 
 #news:hover {
   opacity: 1;
-}
-
-#news:hover .story {
-  opacity: 1;
-  box-shadow: 4px 4px 6px #888;
-  transform: translate(-5px, -5px);
 }
