--- a/css/weather.css
+++ b/css/weather.css
@@ -22,6 +22,7 @@
 
 #weather > * {
   font-size: 40px;
+  margin-right: 20px;
 }
 
 #weather:hover {
@@ -34,6 +35,10 @@
   font-size: 18px;
   width: 400px;
   text-align: center;
+}
+
+#location > h3 {
+  font-size: 24px;
 }
 
 #weather-description {
